[package]
name = "zzfxm-rs"
version = "0.1.0"
edition = "2021"
description = "A faithful Rust port of the ZzFXM music renderer"
license = "MIT"
repository = "https://github.com/meowous3/zzfxm-rs"
keywords = ["audio", "music", "tracker", "zzfx", "game-audio"]
categories = ["multimedia::audio", "game-development"]

[features]
default = []
serde = ["dep:serde", "zzfx-rs/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
zzfx-rs = { git = "https://github.com/meowous3/zzfx-rs" }
